fix: TAP-6796 TM oauth/token API can not get token
Closes TAP-6796